# meta-agent

./: .env.example  .gitignore  .vulture_whitelist.py  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  LICENSE  Makefile  QUICK_SECURITY_GUIDE.md  README.md  SECURITY.md  demo_qwen_agent.py  deploy_qwen3.sh  env.template  exception_audit_report.json  main.py  main_simple.py  pyproject.toml  pytest.ini  qwen3_mcp_tool.jinja  qwen_agent_basic.py  qwen_agent_simplified.py  test_mcp_watcher_demo.py
.cursor/: mcp.json  mcp.json.template
.cursor/rules/: fail_fast.mdc  qwen_agent_mvp.mdc  security.mdc  tests.mdc
.taskmaster/: config.json  state.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  tasks.json
config/: README.md  mcp_servers.json  mcp_servers_example.json  mcp_servers_example_sse.json  mcp_servers_schema.json
config/prompts/: MIGRATION_MAP.md  README.md  prompts_schema.json  system_prompts.json
config/prompts/locales/en/: system_prompts.json
config/prompts/locales/zh/: system_prompts.json
config/prompts/templates/: conversation.json  error_handling.json  tool_calling.json  ui_messages.json
docs/: MCP_CONFIGURATION_SYSTEM.md  MCP_OFFICIAL_INTEGRATION.md  MVP_VALIDATION.md  PRIVATE_K8S_MCP_SETUP.md  QWEN_AGENT_SSE_BUG_TRACKING.md  USER_GUIDE.md  prd.md
scripts/: analyze_code.py  exception_audit.py  pre-commit.sh  security-check.sh
src/: agent_setup.py  app_core.py  exceptions.py  llm_config.py  main.py
src/agent/: __init__.py  core_agent.py  deepseek_client.py  factory.py  function_calling.py  http_client.py  llm_adapter.py  models.py  tool_adapter.py
src/cli/: __init__.py  environment.py  interface.py
src/config/: __init__.py  env_loader.py  loader.py  manager.py  mcp_config.py  mcp_loader.py  mcp_query.py  mcp_validation_config.py  mcp_validation_core.py  mcp_validation_servers.py  mcp_validator.py  mcp_watcher.py  models.py  prompt_manager.py  settings.py  validator.py
src/memory/: __init__.py  manager.py  mem0_client.py  models.py  service.py
src/tools/: __init__.py  mcp_client.py  models.py  sse_parser.py  tool_manager.py
src/tools/qwen_tools/: __init__.py  calculator_tool.py  memory_tools.py
src/ui/: __init__.py  helpers.py
tests/: __init__.py  test_basic.py  test_e2e.py  test_fail_fast_validation.py  test_minimal_system.py  test_prompt_config_validation.py
tests/integration/: test_agent_integration.py  test_mcp_integration.py
tests/unit/: __init__.py  test_agent_models.py  test_cli_environment.py  test_config.py  test_deepseek_client.py  test_function_calling.py  test_mcp_config.py  test_mcp_validator.py  test_mcp_watcher.py  test_memory.py  test_qwen_tools.py  test_tools.py
