[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen-agent-mvp"
version = "0.1.0"
description = "Qwen-Agent MVP: A command-line AI assistant based on Qwen-Agent framework"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Team", email = "team@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8.1"
dependencies = [
    "qwen-agent>=0.0.10",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "mem0ai>=0.0.20",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "sseclient-py>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
qwen-agent-mvp = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto" 